--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,11 @@ spring.datasource.hikari.maximum-pool-size = 10
 spring.datasource.hikari.minimum-idle = 0
 spring.datasource.hikari.idle-timeout = 30000
 
+spring.flyway.url=jdbc:postgresql://localhost:5432/LearnJava
+spring.flyway.user=postgres
+spring.flyway.password=123
+
 spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.properties.hibernate.show_sql   = true
 spring.jpa.properties.hibernate.format_sql = true
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = validate
